--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>FORMS</h1>
-    <Form>
+    <Form action="./index2.html">
         <label for="Name">Name:</label>
         <input type="text" Name="Name" id="Name"  placeholder="name" autocomplete="true" required><br><br>
         <label for="email">Email Address:</label>
